Center play button text when wrapping (fixes #517) (#594)

--- a/src/disco/css/App.scss
+++ b/src/disco/css/App.scss
@@ -170,7 +170,9 @@ header {
   background: rgba(0, 0, 0, 0.5);
   color: #fff;
   display: inline-block;
+  margin: 0 20px;
   padding: 10px;
+  text-align: center;
   transition: background 300ms;
 
   &::before {
